[package]
name = "webextension-sys"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
tokio = { version = "0.2", features = ["full"] }
webext_parser = { git="https://github.com/hajifkd/webext_parser.git" }
heck = "0.3.1"
