[package]
name = "webextension-sys"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
privacy = []
certificate_provider = []

[dependencies]
wasm-bindgen = "0.2.59"
js-sys = "0.3.36"

[build-dependencies]
tokio = { version = "0.2", features = ["full"] }
# webext_parser = { git="https://github.com/hajifkd/webext_parser.git" }
webext_parser = { path="../webext_parser" }
heck = "0.3.1"
