[package]
name = "webextension-sys"
version = "0.1.0"
authors = ["Hajime Fukuda <hajime.fukuda@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.59"
js-sys = "0.3.36"

[build-dependencies]
tokio = { version = "0.2", features = ["full"] }
# webext_parser = { git="https://github.com/hajifkd/webext_parser.git" }
webext_parser = { path="../webext_parser" }
heck = "0.3.1"

[features]
default = []
web_navigation = []
management = []
extension_types = []
input = []
accessibility_features = []
i18n = []
page_action = []
debugger = []
permissions = []
identity = []
omnibox = []
events = []
top_sites = []
system = []
document_scan = []
power = []
vpn_provider = []
types = []
instance_id = []
tabs = []
history = []
certificate_provider = []
proxy = []
runtime = []
tts = []
alarms = []
platform_keys = []
printing_metrics = []
file_system_provider = []
privacy = []
devtools = []
windows = []
context_menus = []
printer_provider = []
networking = []
tab_capture = []
browsing_data = []
font_settings = []
bookmarks = []
extension = []
gcm = []
notifications = []
page_capture = []
browser_action = []
enterprise = []
file_browser_handler = []
idle = []
storage = []
cookies = []
sessions = []
wallpaper = []
downloads = []
declarative_content = []
tts_engine = []
commands = []
content_settings = []
web_request = []
desktop_capture = []
